--- a/.github/workflows/nqp_lint_test_read.yml
+++ b/.github/workflows/nqp_lint_test_read.yml
@@ -23,16 +23,11 @@ jobs:
         key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
         restore-keys: ${{ runner.os }}-poetry-
 
-    - name: Run image
-      uses: abatilo/actions-poetry@v2.0.0
-      with:
-        poetry-version: 1.0
-
-#    - name: Install dependencies
-#      run: |
-#        python -m pip install --upgrade poetry
-#        poetry config virtualenvs.create false
-#        poetry install --no-root
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade poetry
+        poetry config virtualenvs.create false
+        poetry install --no-root
 
     - name: Lint with Black
       if: always()
