--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,16 +22,14 @@ black = "^19.10b0"
 pytest = "^5.4.3"
 pytest-cov = "^2.10.1"
 sphinx_autodoc_typehints = "^1.11.0"
-radon = "^4.1.0"
 sphinx-autodoc-annotation = "^1.0-1"
 sphinx-autodoc-typehints = "^1.11.0"
 sphinx-git = "^11.0.0"
 sphinx-rtd-theme = "^0.5.0"
 
 [tool.black]
-target-version = py38
+target-version = ['py37']
 line-length = 120
-
 
 [tool.isort]
 multi_line_output = 3
