--- a/.github/workflows/nqp_lint_test_write.yml
+++ b/.github/workflows/nqp_lint_test_write.yml
@@ -35,20 +35,21 @@ jobs:
     - name: Lint with Black
       if: always()
       run: |
-        python -m black scripts/
+        poetry run python -m black scripts/
 
     - name: mypy Type Check
+      if: always()
       run: |
         poetry run python -m mypy scripts/
 
     - name: Pytest with Coverage
+      if: always()
       run: |
         poetry run python -m pytest --cov=nqp
 
     - name: Push changes
       run: |
         git config --global user.name 'snayff'
-        git config --global user.email 'snayffs@users.noreply.github.com'
-        git add -A
-        git commit -m "ci lint and test"
+        git config --global user.email 'snayff@users.noreply.github.com'
+        git commit -am "ci lint and test"
         git push
