--- a/.github/workflows/nqp_lint_test_read.yml
+++ b/.github/workflows/nqp_lint_test_read.yml
@@ -1,8 +1,8 @@
 name: NQP - Feature Check - Run Tests (Read)
 
 on: push
-  branches:
-    - develop
+  branches-ignore:
+    - 'feature/**'
     - master
 
 
