--- a/.github/workflows/nqp_lint_test_write.yml
+++ b/.github/workflows/nqp_lint_test_write.yml
@@ -11,6 +11,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+        ref: ${{ github.event.pull_request.head.ref }}
     - uses: actions/setup-python@v2
       with:
         python-version: 3.8
