--- a/.github/workflows/nqp_pr_review.yml
+++ b/.github/workflows/nqp_pr_review.yml
@@ -56,7 +56,15 @@ jobs:
     - name: Pytest with Coverage
       if: always()
       run: |
-        poetry run python -m pytest --cov=.
+        poetry run python -m pytest --cov=. --cov-report=xml:logs/coverage.xml
+
+    - name: Update Git
+      if: github.repository == 'Snayff/notquiteparadise'
+      run: |
+        git config --global user.name 'snayff'
+        git config --global user.email 'snayff@users.noreply.github.com'
+        git add .coverage
+        git commit -am "ci lint and test"
 
     - name: Git Status Check
       if: github.repository == 'Snayff/notquiteparadise'
@@ -66,8 +74,4 @@ jobs:
     - name: Push changes
       if: github.repository == 'Snayff/notquiteparadise'
       run: |
-        git add .coverage
-        git config --global user.name 'snayff'
-        git config --global user.email 'snayff@users.noreply.github.com'
-        git commit -am "ci lint and test"
         git push
