--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -9,10 +9,11 @@ sonar.organization=snayff
 sonar.inclusions=**/scripts/**
 sonar.exclusions=**/docs/**,**/logs/**,.mypy_cache/**,.github/**,assets/**
 sonar.test.inclusions=**/tests/**
-sonar.python.coverage.reportPaths=**/tests/_coverage/**
+sonar.python.coverage.reportPaths=tests/_coverage/**
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 
 # other
 sonar.showProfiling=true
+sonar.verbose=true
