--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -9,7 +9,7 @@ sonar.organization=snayff
 sonar.inclusions=**/scripts/**
 sonar.exclusions=**/docs/**,**/logs/**,.mypy_cache/**,.github/**,assets/**
 sonar.test.inclusions=**/tests/**
-sonar.python.coverage.reportPaths=tests/_coverage/**
+sonar.python.coverage.reportPaths=**/tests/_coverage/*.xml
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
