--- a/.github/workflows/nqp_pr_review.yml
+++ b/.github/workflows/nqp_pr_review.yml
@@ -56,7 +56,7 @@ jobs:
     - name: Pytest with Coverage
       if: always()
       run: |
-        poetry run python -m pytest --cov=. --cov-report=xml:./coverage.xml
+        poetry run python -m pytest --cov=. --cov-report=xml
 
     - name: Update Git
       if: github.repository == 'Snayff/notquiteparadise'
